==> ohilab/libohiboard/source/PIC24FJ/adc_PIC24FJ.c <==
#include "platforms.h"
#include "adc.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#include "interrupt.h"
#define ADC_DEVICE_ENABLE(REGMAP)        (REGMAP->AD1CON1 |= _AD1CON1_ADON_MASK)
#define ADC_DEVICE_DISABLE(REGMAP)       (REGMAP->AD1CON1 &= ~_AD1CON1_ADON_MASK)
#define ADC_VALID_CLOCK_SOURCE(SOURCE) (((SOURCE) == ADC_CLOCKSOURCE_DEDICATED) || \
                                        ((SOURCE) == ADC_CLOCKSOURCE_SYSCLOCK))
#define ADC_VALID_RESOLUTION(RESOLUTION) (((RESOLUTION) == ADC_RESOLUTION_12BIT) || \
                                          ((RESOLUTION) == ADC_RESOLUTION_10BIT))
#define ADC_VALID_VOLTAGE_REFERENCE(REFERENCE) (((REFERENCE) == ADC_VOLTREFERENCE_VREF) || \
                                                ((REFERENCE) == ADC_VOLTREFERENCE_AVDD))
#define ADC_VALID_CONVERSION_TYPE(TYPE) ((TYPE) == ADC_INPUTTYPE_SINGLE_ENDED)
#define ADC_VALID_INTERNAL_CHANNEL(CHANNEL) (((CHANNEL) == ADC_CHANNELS_BANDGAP) || \
                                             ((CHANNEL) == ADC_CHANNELS_AVSS)    || \
                                             ((CHANNEL) == ADC_CHANNELS_AVDD))
#define ADC_MAX_PINS                     16
#define ADC_MAX_PINS                     24
#define ADC_IS_DEVICE(DEVICE) (((DEVICE) == OB_ADC1))

System_Errors Adc_init (Adc_DeviceHandle dev, Adc_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    err = ohiassert(ADC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    err  = ohiassert(ADC_VALID_RESOLUTION(config->resolution));
    err |= ohiassert(ADC_VALID_CLOCK_SOURCE(config->clockSource));
    err |= ohiassert(ADC_VALID_VOLTAGE_REFERENCE(config->voltReference));
    err |= ohiassert(config->prescaler < 0x0100);
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_PARAM;
    }
    // Save configuration
    dev->config = *config;

    // Enable peripheral clock if needed
    if (dev->state == ADC_DEVICESTATE_RESET)
    {
        // Enable peripheral
        UTILITY_CLEAR_REGISTER_BIT(*dev->pmdRegisterPtr, dev->pmdRegisterEnable);
    }
    dev->state = ADC_DEVICESTATE_BUSY;
    
    // Select voltage reference
    dev->regmap->AD1CON2 &= ~(_AD1CON2_PCVFG0_MASK | _AD1CON2_PCVFG1_MASK | _AD1CON2_NVCFG0_MASK);
    dev->regmap->AD1CON2 |= config->voltReference;
    
    // Select clock source
    dev->regmap->AD1CON3 &= ~(_AD1CON3_ADRC_MASK);
    dev->regmap->AD1CON3 |= config->clockSource;
    
    // Configure bit resolution
    dev->regmap->AD1CON1 &= ~(_AD1CON1_MODE12_MASK);
    dev->regmap->AD1CON1 |= config->resolution;
    
    // Set T_AD value
    // Clear LSB part of the register
    dev->regmap->AD1CON3 &= 0xFF00;
    dev->regmap->AD1CON3 |= config->prescaler;
    
    // Clear other registers
    dev->regmap->AD1CSSL = 0u;
    dev->regmap->AD1CHS = 0;
    dev->regmapANCFG->ANCFG = 0;
    
    dev->state = ADC_DEVICESTATE_READY;
    return ERRORS_NO_ERROR;
}

System_Errors Adc_deInit (Adc_DeviceHandle dev)
{
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

//    // Stop on-going conversion...
//    Adc_stop(dev);

    // TODO: disable interrupt

    // TODO: Clear interrupt flags

    // clear registers
    dev->regmap->AD1CON1 = 0;
    dev->regmap->AD1CON2 = 0;
    dev->regmap->AD1CON3 = 0;
    //dev->regmap->AD1CON4 = 0;
    dev->regmap->AD1CON5 = 0;
    dev->regmap->AD1CSSL = 0u;
    dev->regmap->AD1CHS = 0;
    dev->regmapANCFG->ANCFG = 0;
    
    // Disable peripheral clock
    UTILITY_SET_REGISTER_BIT(*dev->pmdRegisterPtr, dev->pmdRegisterEnable);

    dev->state = ADC_DEVICESTATE_RESET;
    return ERRORS_NO_ERROR;
}

System_Errors Adc_configPin (Adc_DeviceHandle dev, Adc_ChannelConfig* config, Adc_Pins pin)
{
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    ohiassert(ADC_VALID_CONVERSION_TYPE(config->type));

    // Configure Pin
    Adc_Channels channel;
    if ((pin == ADC_PINS_INTERNAL) && (config->isInternal == TRUE))
    {
        ohiassert(ADC_VALID_INTERNAL_CHANNEL(config->channel));
        channel = config->channel;
    }
    else
    {
        // Search channel
        bool isPinFound = FALSE;
        for (uint16_t i = 0; i < ADC_MAX_PINS; ++i)
        {
            if (dev->pins[i] == pin)
            {
                Gpio_configAlternate(dev->pinsGpio[i],
                                     GPIO_ALTERNATE_ANALOG,
                                     0);
                channel = dev->pinsChannel[i];
                isPinFound = TRUE;
                break;
            }
        }
        if (isPinFound == FALSE)
        {
            dev->state = ADC_DEVICESTATE_ERROR;
            return ERRORS_ADC_NO_PIN_FOUND;
        }
    }

    // Save sampling time
    dev->samplingTime = config->samplingTime;
    // Clear channel bits, and set new channel number
    dev->regmap->AD1CHS &= ~(_AD1CHS_CH0SA_MASK);
    dev->regmap->AD1CHS |= channel;
    
    return ERRORS_NO_ERROR;
}

System_Errors Adc_start (Adc_DeviceHandle dev)
{
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    // Enable device
    ADC_DEVICE_ENABLE(dev->regmap);

    // FIXME: Right now the follow one it is the only version implemented!!
    if (dev->config.clockSource == ADC_CLOCKSOURCE_SYSCLOCK)
    {
        // Wait sampling time
        UTILITY_SET_REGISTER_BIT(dev->regmap->AD1CON1,_AD1CON1_SAMP_MASK);
        System_delay(dev->samplingTime);
        UTILITY_CLEAR_REGISTER_BIT(dev->regmap->AD1CON1,_AD1CON1_SAMP_MASK);
    }

    // The conversion starts...

    return ERRORS_NO_ERROR;
}

System_Errors Adc_poll (Adc_DeviceHandle dev, uint32_t timeout)
{
    uint32_t tickstart = 0u;

    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    // check conversion status
    tickstart = System_currentTick();
    while ((dev->regmap->AD1CON1 & _AD1CON1_DONE_MASK) == 0u)
    {
        if ((System_currentTick() - tickstart) > timeout)
        {
            return ERRORS_ADC_TIMEOUT;
        }
    }

    // Single conversion or sequence conversions flag is up!
    return ERRORS_ADC_CONVERSION_DONE;
}
