==> ohilab/libohiboard/source/STM32L0/adc_STM32L0.c <==
#include "platforms.h"
#include "adc.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#include "interrupt.h"
#define ADC_CLOCK_ENABLE(REG,MASK) do {                                         \
                                     UTILITY_SET_REGISTER_BIT(REG,MASK);        \
                                     asm("nop");                                \
                                     (void) UTILITY_READ_REGISTER_BIT(REG,MASK);\
                                   } while (0)
#define ADC_CLOCK_DISABLE(REG,MASK) do {                                         \
                                      UTILITY_CLEAR_REGISTER_BIT(REG,MASK);      \
                                      asm("nop");                                \
                                      (void) UTILITY_READ_REGISTER_BIT(REG,MASK);\
                                    } while (0)
#define ADC_MAX_PINS                     20
#define ADC_DEVICE_ENABLE_MASK           (ADC_CR_ADCAL_Msk    | \
                                          ADC_CR_ADSTP_Msk    | \
                                          ADC_CR_ADSTART_Msk  | \
                                          ADC_CR_ADDIS_Msk    | \
                                          ADC_CR_ADEN_Msk)
#define ADC_DEVICE_IS_ENABLE(DEVICE) (((DEVICE->regmap->CR & ADC_CR_ADEN_Msk) == ADC_CR_ADEN_Msk) &&   \
		                              ((DEVICE->regmap->ISR & ADC_ISR_ADRDY_Msk) == ADC_ISR_ADRDY_Msk))

System_Errors Adc_init (Adc_DeviceHandle dev, Adc_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    err = ohiassert(ADC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    err  = ohiassert(ADC_VALID_RESOLUTION(config->resolution));
    err |= ohiassert(ADC_VALID_PRESCALER(config->prescaler));
    err |= ohiassert(ADC_VALID_DATA_ALIGN(config->dataAlign));
    err |= ohiassert(ADC_VALID_EXTERNAL_TRIGGER(config->externalTrigger));
    err |= ohiassert(ADC_VALID_EXTERNAL_TRIGGER_POLARITY(config->externalTriggerPolarity));
    err |= ohiassert(UTILITY_VALID_STATE(config->continuousConversion));
    err |= ohiassert(UTILITY_VALID_STATE(config->discontinuousConversion));
    err |= ohiassert(config->discontinuousConversionNumber < 0x08u);
    err |= ohiassert(UTILITY_VALID_STATE(config->sequence));
    err |= ohiassert(config->sequenceNumber < 0x10u);
    err |= ohiassert(UTILITY_VALID_STATE(config->overrun));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_PARAM;
    }
    // Save configuration
    dev->config = *config;

    // Enable peripheral clock if needed
    if (dev->state == ADC_DEVICESTATE_RESET)
    {
        // Enable peripheral clock
        ADC_CLOCK_ENABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);
    }

    // Check internal regulator status
    if ((dev->regmap->CR & ADC_CR_ADVREGEN) == 0u)
    {
        Adc_enableInternalRegulator(dev);

        // Wait for voltage stabilization
        System_delay(ADC_DELAY_VOLTAGE_REGULATOR_STARTUP);
        // Check again if the voltage regulator was enabled,
        // Otherwise the ADC initialization fail and return an error
        if ((dev->regmap->CR & ADC_CR_ADVREGEN) == 0u)
        {
            dev->state = ADC_DEVICESTATE_ERROR;
            return ERRORS_ADC_INIT_FAIL;
        }
    }

    // Now it is possible configure the peripheral
    // WARNING: no on-going conversion...
    if ((dev->regmap->CR & ADC_CR_ADSTART) == 0u)
    {
        // Configuration of common parameters
        // WARNING: all peripheral must be disabled
        if (!ADC_DEVICE_IS_ENABLE(dev))
        {
            Adc_setClock(dev,config);
        }

        // Configure specific peripheral

        // Set continuous conversion, data align, resolution and discontinuous conversion mode
        dev->regmap->CFGR1 &= (~(ADC_CFGR1_CONT_Msk    |
                                 ADC_CFGR1_DISCEN_Msk  |
                                 ADC_CFGR1_RES_Msk     |
                                 ADC_CFGR1_ALIGN_Msk   |
                                 ADC_CFGR1_OVRMOD_Msk));
        // Write user configuration
        dev->regmap->CFGR1 |= config->dataAlign  |
                             config->resolution |
                             ((config->continuousConversion == UTILITY_STATE_ENABLE) ? ADC_CFGR1_CONT : 0u) |
                             ((config->overrun == UTILITY_STATE_ENABLE) ? ADC_CFGR1_OVRMOD : 0u)            |
                             ((config->discontinuousConversion == UTILITY_STATE_ENABLE) ? ADC_CFGR1_DISCEN : 0u);

        if (config->discontinuousConversion == UTILITY_STATE_ENABLE)
        {
            dev->regmap->CFGR1 |= ((config->discontinuousConversionNumber & 0x07ul) << ADC_CFGR1_DISCEN_Pos);
        }

        // Check external trigger choice
        // In case of external trigger enabled, update CFGR register
        // Mask register (disable trigger)
        dev->regmap->CFGR1 &= (~(ADC_CFGR1_EXTSEL_Msk | ADC_CFGR1_EXTEN_Msk));
        if (config->externalTriggerPolarity != 0u)
        {
            // Write user config
            dev->regmap->CFGR1 |= config->externalTriggerPolarity | config->externalTrigger;
        }

        // FIXME: Add Oversampling, LowPowerAutoWait and DMA

        // Check callback and enable interrupts
        if ((config->eocCallback != 0) ||
            (config->eosCallback != 0) ||
            (config->overrunCallback != 0))
        {
            // Save callback
            dev->eocCallback = config->eocCallback;
            dev->eosCallback = config->eosCallback;
            dev->overrunCallback = config->overrunCallback;
            // Enable interrupt
            Interrupt_enable(dev->isrNumber);
        }
    }
    else
    {
        dev->state = ADC_DEVICESTATE_ERROR;
        return ERRORS_ADC_INIT_FAIL;
    }

    dev->state = ADC_DEVICESTATE_READY;
    return ERRORS_NO_ERROR;
}

System_Errors Adc_deInit (Adc_DeviceHandle dev)
{
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    // Stop on-going conversion...
    Adc_stop(dev);

    // TODO: disable interrupt

    // TODO: Clear interrupt flags

    // Disable peripheral clock
    ADC_CLOCK_DISABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);

    dev->state = ADC_DEVICESTATE_RESET;
    return ERRORS_NO_ERROR;
}

System_Errors Adc_configPin (Adc_DeviceHandle dev, Adc_ChannelConfig* config, Adc_Pins pin)
{
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    ohiassert(ADC_VALID_SAMPLING_TIME(config->samplingTime));
    ohiassert(ADC_VALID_CONVERSION_TYPE(config->type));

    // Configure Pin
    Adc_Channels channel;
    if ((pin == ADC_PINS_INTERNAL) && (config->isInternal == TRUE))
    {
        channel = config->channel;
    }
    else
    {
        // Search channel
        bool isPinFound = FALSE;
        for (uint16_t i = 0; i < ADC_MAX_PINS; ++i)
        {
            if (dev->pins[i] == pin)
            {
                Gpio_configAlternate(dev->pinsGpio[i],
                                     GPIO_ALTERNATE_ANALOG,
                                     0);
                channel = dev->pinsChannel[i];
                isPinFound = TRUE;
                break;
            }
        }
        if (isPinFound == FALSE)
        {
            dev->state = ADC_DEVICESTATE_ERROR;
            return ERRORS_ADC_NO_PIN_FOUND;
        }
    }


    // WARNING: no on-going regular conversion...
    if ((dev->regmap->CR & ADC_CR_ADSTART) == 0u)
    {
        // WARNING: no on-going regular conversion and injected conversion...
        if (((dev->regmap->CR & ADC_CR_ADSTART) == 0u) &&
            ((dev->regmap->CR & ADC_CR_ADCAL) == 0u))
        {
            // Set channel sampling time
            Adc_setSamplingTime(dev,channel,config->samplingTime);

            // FIXME: Set channel offset
        }

        // Manage internal channel
        // Check if the selected peripheral have this channel connected, and
        // if the selected channel was just enabled
        if ((config->channel == ADC_CHANNELS_TEMPERATURE) &&
           ((dev->rcommon->CCR & ADC_CCR_TSEN_Msk) == 0u) &&
            ADC_VALID_TEMPERATURE_CHANNEL(dev))
        {
            dev->rcommon->CCR |= ADC_CCR_TSEN;
            // FIXME: Is it too much?
            System_delay(1);
        }
        else if ((config->channel == ADC_CHANNELS_VREFINT)       &&
                ((dev->rcommon->CCR & ADC_CCR_VREFEN_Msk) == 0u) &&
                 ADC_VALID_VREFINT_CHANNEL(dev))
        {
            dev->rcommon->CCR |= ADC_CCR_VREFEN;
        }
        dev->regmap->CHSELR = ((uint32_t)channel & ADC_CHANNEL_MASK);
    }
    else
    {
        return ERRORS_ADC_CONVERSION_ONGOING;
    }

    return ERRORS_NO_ERROR;
}

System_Errors Adc_start (Adc_DeviceHandle dev)
{
    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    // WARNING: no on-going regular conversion...
    if ((dev->regmap->CR & ADC_CR_ADSTART) == 0u)
    {
        // Enable the peripheral
        System_Errors err = Adc_enable(dev);
        if (err != ERRORS_NO_ERROR)
        {
            return err;
        }

        // Clear flag, no unknown state form previous conversion
        dev->regmap->ISR = (ADC_ISR_EOC | ADC_ISR_EOS | ADC_ISR_OVR);

        // Disable all interrupt
        dev->regmap->IER &= (~(ADC_IER_EOCIE | ADC_IER_EOSIE | ADC_IER_OVRIE));

        // Check interrupt
        if ((dev->eocCallback != 0) && (dev->config.eoc == ADC_ENDOFCONVERSION_SINGLE))
        {
            dev->regmap->IER |= ADC_IER_EOCIE;
        }
        else if ((dev->eosCallback != 0) && (dev->config.eoc == ADC_ENDOFCONVERSION_SEQUENCE))
        {
            dev->regmap->IER |= ADC_IER_EOSIE;
        }

        // Only when data must be preserved the interrupt was lanched!
        if ((dev->overrunCallback != 0) && (dev->config.overrun == UTILITY_STATE_DISABLE))
        {
            dev->regmap->IER |= ADC_IER_OVRIE;
        }

        // Start conversion
        dev->regmap->CR |= ADC_CR_ADSTART;
    }
    else
    {
        return ERRORS_ADC_IS_BUSY;
    }

    return ERRORS_NO_ERROR;
}

System_Errors Adc_poll (Adc_DeviceHandle dev, uint32_t timeout)
{
    uint32_t flag = 0u;
    uint32_t tickstart = 0u;

    // Check the ADC device
    if (dev == NULL)
    {
        return ERRORS_ADC_NO_DEVICE;
    }
    // Check the ADC instance
    if (ohiassert(ADC_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_ADC_WRONG_DEVICE;
    }

    if (dev->config.eoc == ADC_ENDOFCONVERSION_SINGLE)
    {
        flag = ADC_ISR_EOC;
    }
    else
    {
        flag = ADC_ISR_EOS;
    }

    // check conversion status
    tickstart = System_currentTick();
    while ((dev->regmap->ISR & flag) == 0u)
    {
        if ((System_currentTick() - tickstart) > timeout)
        {
            return ERRORS_ADC_TIMEOUT;
        }
    }

    // Single conversion or sequence conversions flag is up!
    return ERRORS_ADC_CONVERSION_DONE;
}
